--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="username">Teguh kurniawan</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="chats">Chats</string>
     <string name="search_contact">Search Contact</string>
@@ -27,4 +27,5 @@
     <string name="log_out">Log out</string>
     <string name="loading">loading..</string>
     <string name="ketik_username_yang_ingin_dicari">Ketik username yang ingin dicari</string>
+    <string name="search">Search</string>
 </resources>
